--- a/about.html
+++ b/about.html
@@ -16,7 +16,55 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light pb-4 mb-4">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand nav-link disabled">Healing Crystals</a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav">
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="products.html" class="nav-item nav-link">Products</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="contact.html" class="nav-item nav-link" tabindex="-1">Contact</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
+
+    <div class="container justify-content-center align-items-center width 18rem" >
+        <div class="align-items-center justify-content-center">
+            <img src="https://images.pexels.com/photos/2101704/pexels-photo-2101704.jpeg?auto=compress&cs=tinysrgb&w=600" class=" img-fluid rounded mx-auto d-block" alt="Picture of a table with crystals and books">
+            <h1 class=" display-1 text-center"> This is Healing Crystals</h1>
+            <h2 class="display-6 text-center"> A company devoted to your wellbeing!</h2>
+            <p class="text-center lead p-3 m-3"> 
+                We come from a long tradition of believing and now we want 
+                to share it with you. We offer a wide selection of magical crystals specially handpicked by us.
+                We travel the world to find the specific pieces of crystals that holds the most magic 
+                and will allow you to transform your life into the direction you've always dreamed of.
+            </p>
+        </div>
+    </div>
+    <div id="myModal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Join us!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Would you like to join our magical community?</p>
+                    <p class="text-secondary"><small>Head over to our contact page to start your dream life!</small></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <a class="btn btn-primary" href="contact.html" role="button">Contact</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -30,6 +78,12 @@
 
 
     <!-- JavaScript Bundle with Popper -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var myModal = new bootstrap.Modal(document.getElementById("myModal"));
+            myModal.show();
+        });
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
