--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,22 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light pb-4 mb-4">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand nav-link disabled">Healing Crystals</a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav">
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="products.html" class="nav-item nav-link">Products</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="contact.html" class="nav-item nav-link" tabindex="-1">Contact</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 
 
