--- a/products.html
+++ b/products.html
@@ -16,17 +16,323 @@
 </head>
 
 <body>
-
-
-
-
-
-
-
-
-
-
-
+    <section style="background-color: #eee;">
+        <div class="container py-5">
+          <div class="row">
+            <div class="col-md-12 col-lg-4 mb-4 mb-lg-0">
+              <div class="card text-black">
+                <img src="images/holy-crystals.jpg" height="300px"
+                  class="card-img-top" alt="holy crystal" />
+                <div class="card-body">
+                  <div class="text-center mt-1">
+                    <h4 class="card-title">Holy Crystals</h4>
+                    <h6 class="text-primary mb-1 pb-3">Starting at $399</h6>
+                  </div>
+                  <div class="text-center">
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Quick Look</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">5.8 carat</span>
+                      <span>Devine lost power</span>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">
+                        <i class="fas fa-camera-retro"></i>
+                      </span>
+                      <ul class="list-unstyled mb-0">
+                        <li aria-hidden="true">—</li>
+                        <li>Rare</li>
+                        <li>Anicent</li>
+                        <li aria-hidden="true">—</li>
+                      </ul>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">2x</span>
+                      <span>Crystal Effect range</span>
+                    </div>
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Capacity</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4 lead">
+                      <span class="mb-2">120 Crystal Force</span>
+                      <span class="mb-2">220 Crystal Force</span>
+                      <span style="color: transparent;">0</span>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-row">
+                    <button type="button" class="btn btn-primary flex-fill me-1" data-mdb-ripple-color="dark">
+                      Learn more
+                    </button>
+                    <button type="button" class="btn btn-danger flex-fill ms-1">Buy now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-md-0">
+              <div class="card text-black">
+                <img src="images/green-crystals.jpg" height="300px"
+                  class="card-img-top" alt="green crystal" />
+                <div class="card-body">
+                  <div class="text-center mt-1">
+                    <h4 class="card-title">Kiruna Forest Crystals</h4>
+                    <h6 class="text-primary mb-1 pb-3">Starting at $499</h6>
+                  </div>
+                  <div class="text-center">
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Quick Look</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">6.1 carat</span>
+                      <span>Forest power</span>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">
+                        <i class="fas fa-camera-retro"></i>
+                      </span>
+                      <ul class="list-unstyled mb-0">
+                        <li aria-hidden="true">Ultra Effect</li>
+                        <li>Rare</li>
+                        <li>Anicent</li>
+                        <li>Powerful</li>
+                        <li aria-hidden="true">—</li>
+                        <li aria-hidden="true">—</li>
+                      </ul>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">2x</span>
+                      <span>Crystal Effect range</span>
+                    </div>
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Capacity</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4 lead">
+                      <span class="mb-2">120 Crystal Force</span>
+                      <span class="mb-2">220 Crystal Force</span>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-row">
+                    <button type="button" class="btn btn-primary flex-fill me-1" data-mdb-ripple-color="dark">
+                      Learn more
+                    </button>
+                    <button type="button" class="btn btn-danger flex-fill ms-1">Buy now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-md-0">
+              <div class="card text-black">
+                <img src="images/purple-crystals.jpg" height="300px"
+                  class="card-img-top" alt="iPhone" />
+                <div class="card-body">
+                  <div class="text-center mt-1">
+                    <h4 class="card-title">Lisebergs Death Crystals</h4>
+                    <h6 class="text-primary mb-1 pb-3">Starting at $599</h6>
+                  </div>
+                  <div class="text-center">
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Quick Look</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">5.8 carat</span>
+                      <span>Super Omega Crystal</span>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">
+                        <i class="fas fa-camera-retro"></i>
+                      </span>
+                      <ul class="list-unstyled mb-0">
+                        <li aria-hidden="true">Ultra Effect</li>
+                        <li>Epic</li>
+                        <li>Powerful</li>
+                        <li>Forgotten</li>
+                        <li>Anicent</li>
+                        <li aria-hidden="true">—</li>
+                      </ul>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">4x</span>
+                      <span>Crystal Effect range</span>
+                    </div>
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Capacity</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4 lead">
+                      <span class="mb-2">220 Crystal Force</span>
+                      <span class="mb-2">320 Crystal Force</span>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-row">
+                    <button type="button" class="btn btn-primary flex-fill me-1" data-mdb-ripple-color="dark">
+                      Learn more
+                    </button>
+                    <button type="button" class="btn btn-danger flex-fill ms-1">Buy now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+    <!--New row if for pc screens-->
+    <section style="background-color: #eee;">
+        <div class="container py-5">
+          <div class="row">
+            <div class="col-md-12 col-lg-4 mb-4 mb-lg-0">
+              <div class="card text-black">
+                <img src="images/holy-crystals.jpg" height="300px"
+                  class="card-img-top" alt="holy crystal" />
+                <div class="card-body">
+                  <div class="text-center mt-1">
+                    <h4 class="card-title">Holy Crystals</h4>
+                    <h6 class="text-primary mb-1 pb-3">Starting at $399</h6>
+                  </div>
+                  <div class="text-center">
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Quick Look</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">5.8 carat</span>
+                      <span>Devine lost power</span>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">
+                        <i class="fas fa-camera-retro"></i>
+                      </span>
+                      <ul class="list-unstyled mb-0">
+                        <li aria-hidden="true">—</li>
+                        <li>Rare</li>
+                        <li>Anicent</li>
+                        <li aria-hidden="true">—</li>
+                      </ul>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">2x</span>
+                      <span>Crystal Effect range</span>
+                    </div>
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Capacity</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4 lead">
+                      <span class="mb-2">120 Crystal Force</span>
+                      <span class="mb-2">220 Crystal Force</span>
+                      <span style="color: transparent;">0</span>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-row">
+                    <button type="button" class="btn btn-primary flex-fill me-1" data-mdb-ripple-color="dark">
+                      Learn more
+                    </button>
+                    <button type="button" class="btn btn-danger flex-fill ms-1">Buy now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-md-0">
+              <div class="card text-black">
+                <img src="images/green-crystals.jpg" height="300px"
+                  class="card-img-top" alt="green crystal" />
+                <div class="card-body">
+                  <div class="text-center mt-1">
+                    <h4 class="card-title">Kiruna Forest Crystals</h4>
+                    <h6 class="text-primary mb-1 pb-3">Starting at $499</h6>
+                  </div>
+                  <div class="text-center">
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Quick Look</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">6.1 carat</span>
+                      <span>Forest power</span>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">
+                        <i class="fas fa-camera-retro"></i>
+                      </span>
+                      <ul class="list-unstyled mb-0">
+                        <li aria-hidden="true">Ultra Effect</li>
+                        <li>Rare</li>
+                        <li>Anicent</li>
+                        <li>Powerful</li>
+                        <li aria-hidden="true">—</li>
+                        <li aria-hidden="true">—</li>
+                      </ul>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">2x</span>
+                      <span>Crystal Effect range</span>
+                    </div>
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Capacity</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4 lead">
+                      <span class="mb-2">120 Crystal Force</span>
+                      <span class="mb-2">220 Crystal Force</span>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-row">
+                    <button type="button" class="btn btn-primary flex-fill me-1" data-mdb-ripple-color="dark">
+                      Learn more
+                    </button>
+                    <button type="button" class="btn btn-danger flex-fill ms-1">Buy now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 mb-md-0">
+              <div class="card text-black">
+                <img src="images/purple-crystals.jpg" height="300px"
+                  class="card-img-top" alt="iPhone" />
+                <div class="card-body">
+                  <div class="text-center mt-1">
+                    <h4 class="card-title">Lisebergs Death Crystals</h4>
+                    <h6 class="text-primary mb-1 pb-3">Starting at $599</h6>
+                  </div>
+                  <div class="text-center">
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Quick Look</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">5.8 carat</span>
+                      <span>Super Omega Crystal</span>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">
+                        <i class="fas fa-camera-retro"></i>
+                      </span>
+                      <ul class="list-unstyled mb-0">
+                        <li aria-hidden="true">Ultra Effect</li>
+                        <li>Epic</li>
+                        <li>Powerful</li>
+                        <li>Forgotten</li>
+                        <li>Anicent</li>
+                        <li aria-hidden="true">—</li>
+                      </ul>
+                    </div>
+                    <div class="d-flex flex-column mb-4">
+                      <span class="h1 mb-0">4x</span>
+                      <span>Crystal Effect range</span>
+                    </div>
+                    <div class="p-3 mx-n3 mb-4" style="background-color: #eff1f2;">
+                      <h5 class="mb-0">Capacity</h5>
+                    </div>
+                    <div class="d-flex flex-column mb-4 lead">
+                      <span class="mb-2">220 Crystal Force</span>
+                      <span class="mb-2">320 Crystal Force</span>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-row">
+                    <button type="button" class="btn btn-primary flex-fill me-1" data-mdb-ripple-color="dark">
+                      Learn more
+                    </button>
+                    <button type="button" class="btn btn-danger flex-fill ms-1">Buy now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
 
 
     <!-- JavaScript Bundle with Popper -->
