added contact-page to repo

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <p>Fill in the spiritual form below and start <span><b>your</b></span> journey.</p>
     </div>
 
-    <!--Form-->
+    <!--The form-->
     <div class="form-container m-5 p-3 justify-content-center shadow-lg">
         <div class="row justify-content-center align-items-center">
             <div class="row col-lg-5 md-5 text-md-start">
