--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <body>
 
     <!--community-header-->
-    <div class="container my-5 col-md-6 col-lg-7 justify-content-center text-center ft-colo">
+    <div class="container my-5 bg-light py-3 border col-lg-7 justify-content-center text-center ft-colo">
         <h1>Fill your chakra with energy in our community!</h1>
         <p class="lead">Connect with other crystal lovers from around the world.</p>
         <p>Fill in the spiritual form below and start <span><b>your</b></span> journey.</p>
@@ -31,66 +31,66 @@
                 <form>
                     <div class="form-group">
                         <label for="inputFName">First name</label>
-                        <input type="text" class="form-control" id="inputFName" placeholder="First Name">
+                        <input type="text" class="form-control" id="inputFName" name="fName" placeholder="First Name">
                     </div>
                     <div class="form-group ">
                         <label for="inputLName">Last name</label>
-                        <input type="text" class="form-control" id="inputLName" placeholder="Last name">
+                        <input type="text" class="form-control" id="inputLName" name="lName" placeholder="Last name">
                     </div>
                     <div class="form-group">
-                        <label for="inputEmail4">Email</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                        <label for="inputEmail">Email</label>
+                        <input type="email" class="form-control" id="inputEmail" name="email" placeholder="E-mail">
                     </div>
 
                     <div class="form-group">
-                        <label for="inputAddress">Energy level</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="Energy level">
+                        <label for="inputEnergy">Energy level</label>
+                        <input type="text" class="form-control" id="inputEnergy" name="energyLevel" placeholder="Energy level">
                     </div>
                     <div class="form-group">
-                        <label for="inputCity">Planet</label>
-                        <input type="text" class="form-control" id="inputCity" placeholder="Planet">
+                        <label for="inputPlanet">Planet</label>
+                        <input type="text" class="form-control" id="inputPlanet" name="Planet" placeholder="Planet">
                     </div>
                     <div class="form-group">
-                        <label for="inputState">Zodiac</label>
-                        <select id="inputState" class="form-control">
+                        <label for="inputZodiac">Zodiac</label>
+                        <select id="inputZodiac" name="zodiacs" class="form-control">
                             <option selected>Choose...</option>
-                            <option>Aries</option>
-                            <option>Taurus</option>
-                            <option>Gemini</option>
-                            <option>Cancer</option>
-                            <option>Leo</option>
-                            <option>Virgo</option>
-                            <option>Libra</option>
-                            <option>Scorpio</option>
-                            <option>Sagittarius</option>
-                            <option>Capricorn</option>
-                            <option>Aquarius</option>
-                            <option>Pisces</option>
+                            <option value="aries">Aries</option>
+                            <option value="taurus">Taurus</option>
+                            <option value="gemini">Gemini</option>
+                            <option value="cancer">Cancer</option>
+                            <option value="leo">Leo</option>
+                            <option value="virgo">Virgo</option>
+                            <option value="libra">Libra</option>
+                            <option value="scorpio">Scorpio</option>
+                            <option value="sagittarius">Sagittarius</option>
+                            <option value="capricorn">Capricorn</option>
+                            <option value="aquarius">Aquarius</option>
+                            <option value="pisces">Pisces</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="inputPassword4">Password</label>
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        <label for="inputPassword">Password</label>
+                        <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <label for="inputPassword4">Enter password again</label>
-                        <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+                        <label for="inputPassword2">Enter password again</label>
+                        <input type="password" class="form-control" id="inputPassword2" name="password2" placeholder="Password">
                     </div>
                     <p class="lead mt-4">I am mostly interested in:</p>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck1">
+                        <input class="form-check-input" type="checkbox" id="gridCheck1" name="check1" value="Healing">
                         <label class="form-check-label" for="gridCheck1">
                             Healing
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck2">
+                        <input class="form-check-input" type="checkbox" id="gridCheck2" name="check2" value="Magic">
                         <label class="form-check-label" for="gridCheck2">
                             Magic
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck3">
+                        <input class="form-check-input" type="checkbox" id="gridCheck3" name="check3" value="BlackMagic">
                         <label class="form-check-label" for="gridCheck3">
                             Black magic
                         </label>
@@ -110,8 +110,8 @@
 
 
     <!--modal pop-up-->
-    <section class="bg-light mb-5">
-        <div class="container">
+    <section class="container my-5 bg-light border col-md-5 col-lg-6 py-3 justify-content-center text-center">
+        <div class="align-items-center">
             <div class="text-center">
                 <h2>Subscribe for more</h2>
                 <p>Sign up for our newsletter and get the latest updates on crystals and energies.</p>
